remaining sections and form and footer added

--- a/index.html
+++ b/index.html
@@ -6,55 +6,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>webUI</title>
+    <title>CTS</title>
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/8b8ce66fec.js" crossorigin="anonymous"></script>
 </head>
 
 
 <!-------------------------------------------------- HeADER+NAVBAR --------------------------------------------------------->
-
-<div class="header">
-    <div>
-        <ul class="menu horizontal-align no-bullets">
-            <li class="p-10">
-                <a href="#" data-attribute="topHeaderNavTag" class="text-black" title="Careers">Careers</a>
-            </li>
-            <li>
-                <span class="black dot"></span>
-            </li>
-            <li class="p-10">
-                <a href="#" data-attribute="topHeaderNavTag" class="text-black" title="Events">Events</a>
-            </li>
-            <li>
-                <span class="black dot"></span>
-            </li>
-            <li class="p-10">
-                <a href="#" data-attribute="topHeaderNavTag" class="text-black" title="Investors">Investors</a>
-            </li>
-            <li>
-                <span class="black dot"></span>
-            </li>
-            <li>
-                <a class="black-vertical"></a>
-            </li>
-            <li>
-                <span>
-                    <img class="globeLogo" src="./assets/globe.png" alt="globe" title="worldwide">
-                </span>
-            </li>
-            <li class="p-10">
-                <a href="#" data-attribute="topHeaderNavTag" class="text-black" title="Worldwide">Worldwide</a>
-            </li>
-            <li>
-                <span>
-                    <img class="searchLogo" src="http://cdn.onlinewebfonts.com/svg/img_158544.png" alt="search-button"
-                        title="search">
-                </span>
-            </li>
-        </ul>
+<div class="section-0">
+    <div class="header ">
+        <div>
+            <ul class="menu horizontal-align no-bullets">
+                <li class="p-10">
+                    <a href="#" data-attribute="topHeaderNavTag" class="text-black" title="Careers">Careers</a>
+                </li>
+                <li>
+                    <span class="black dot"></span>
+                </li>
+                <li class="p-10">
+                    <a href="#" data-attribute="topHeaderNavTag" class="text-black" title="Events">Events</a>
+                </li>
+                <li>
+                    <span class="black dot"></span>
+                </li>
+                <li class="p-10">
+                    <a href="#" data-attribute="topHeaderNavTag" class="text-black" title="Investors">Investors</a>
+                </li>
+                <li>
+                    <a class="black-vertical"></a>
+                </li>
+                <li>
+                    <span>
+                        <img class="globeLogo" src="./assets/globe.png" alt="globe" title="worldwide">
+                    </span>
+                </li>
+                <li class="p-10">
+                    <a href="#" data-attribute="topHeaderNavTag" class="text-black" title="Worldwide">Worldwide</a>
+                </li>
+                <li>
+                    <span>
+                        <img class="searchLogo" src="http://cdn.onlinewebfonts.com/svg/img_158544.png"
+                            alt="search-button" title="search">
+                    </span>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
+
+
+
+
+
 <div class="navBar">
     <div class="row align-middle pd-1 jc-spaceBetween">
         <div class="coulmns large-4 no-pd align-middle disp-flex">
@@ -87,8 +90,7 @@
                 <p class="section1-p">Navigate the COVID-19 crisis and its aftermath, and emerge with a commanding
                     position in your industry.</p>
                 <a href="/covid-19-chaos-to-catalyst-helping-companies-emerge-stronger" title="SEE HOW"
-                    data-attribute="homeBanner" class="button small hollow success">SEE HOW<i
-                        class="arrow-right"></i></a>
+                    data-attribute="homeBanner" class="button hollow success">SEE HOW<i class="arrow-right"></i></a>
             </div>
         </div>
     </div>
@@ -224,11 +226,12 @@
         <img src="./assets/img7.jpg" alt="">
     </div>
     <div class="content ovpd-1">
-        <div class="label uppercase bold mb-half">SPECIAL REPORT</div>
-        <h5 class="h5"></h5>
-        <p class="pd-small mb-half">What will the world look like in 2023? This special report looks at the impacts of
-            the virus.</p>
-        <a href="#" class="uppercase button green-hover fill-green small" title="Learn more"> <i>Explore</i> </a>
+        <div class="label uppercase bold mb-half">Analyst Accolade</div>
+        <p class="pd-small mb-half">
+            What will the world look like in 2023? This special report looks at the impacts of
+            the virus and various other factors
+        </p>
+        <a href="#" class="uppercase button green-hover fill-green small" title="Learn more"> <i>Learn More</i> </a>
     </div>
 </div>
 
@@ -326,8 +329,8 @@
 
 <!-------------------------------------------------- SECTION-10 --------------------------------------------------------->
 <div class="section-10 bg-grey pd-3">
-    <h3 class="uppercase bold text-blue text-center mb-one">latest thinking</h3>
-    <div class="imgArea disp-flex flex-wrap flex-dir-row align-middle jc-flexStart margin-l1">
+    <h3 class="uppercase bold text-blue text-center mb-one dynamic-heading">latest thinking</h3>
+    <div class="imgArea disp-flex flex-wrap flex-dir-row align-middle jc-center margin-l1">
         <div class="single-img-section-10 over m-1 bd-1 disp-flex flex-dir-column">
             <div class="custom-label label uppercase mb-large">perspectives</div>
             <div class="newsHead5 ovpd-1">
@@ -422,10 +425,10 @@
     <div class="carousel-li">
         <ul class="carousel-progress disp-flex align-middle no-bullets">
             <li>
-                <button class="active" type="button" role="button"></button>
+                <button class="not-active" type="button" role="button"></button>
             </li>
             <li>
-                <button class="not-active" type="button" role="button"></button>
+                <button class="active" type="button" role="button"></button>
             </li>
             <li>
                 <button class="not-active" type="button" role="button"></button>
@@ -440,8 +443,241 @@
 
 
 <!-------------------------------------------------- SECTION-11 --------------------------------------------------------->
-<div class="section-11">
-    <h3 class="uppercase bold text-blue text-center mb-one">digitally cognizants</h3>
+<div class="section-11 mb-large">
+    <h3 class="uppercase bold text-blue text-center mb-one pt-3 mb-one dynamic-heading">digitally cognizants</h3>
+    <div class="category-section ovpd-1">
+        <div class="category-state">
+            <ul class="state-type  disp-flex flex-dir-row jc-flexEnd text-normal text-small">
+                <li class="state-item pd-xs no-bullets item-head">View : </li>
+                <li class="state-item pd-xs no-bullets active-state">Most Recent</li>
+                <li class="state-item pd-xs no-bullets active-state"><a class="black-vertical"></a></li>
+                <li class="state-item pd-xs no-bullets text-blue bold">Most Popular</li>
+            </ul>
+        </div>
+    </div>
+    <div class="blog-section disp-flex flex-dir-column">
+        <div class="single-blog bd-bt-1 mb-two pb-1">
+            <small class="text-grey"> <strong>July 01, 2020</strong> <strong class="viewCount">66 views</strong>
+            </small>
+            <h5 class="newsHead5 bold mt-half mb-half w-100">Meeting the WFH Crunch with Remote Manageability, In or Out
+                of Band</h5>
+            <p class="pt-half">
+                A remote manageability system empowers IT to monitor, restore, upgrade and protect
+                devices whether they're powered-up or powered-down.
+            </p>
+            <div class="author-section disp-flex flex-dir-row ovpd-1">
+                <div class="userImage ovpd-2">
+                    <i class="far fa-user"></i>
+                </div>
+                <div class="author-details ovpd-2">
+                    <small class="text-grey">
+                        By Amresh Singh
+                    </small>
+                </div>
+
+            </div>
+        </div>
+        <div class="single-blog bd-bt-1 mb-two pb-1">
+            <small class="text-grey"> <strong>July 01, 2020</strong> <strong class="viewCount">66 views</strong>
+            </small>
+            <h5 class="newsHead5 bold mt-half mb-half w-100">Meeting the WFH Crunch with Remote Manageability, In or Out
+                of Band</h5>
+            <p class="pt-half">
+                A remote manageability system empowers IT to monitor, restore, upgrade and protect
+                devices whether they're powered-up or powered-down.
+            </p>
+            <div class="author-section disp-flex flex-dir-row ovpd-1">
+                <div class="userImage ovpd-2">
+                    <i class="far fa-user"></i>
+                </div>
+                <div class="author-details ovpd-2">
+                    <small class="text-grey">
+                        By Amresh Singh
+                    </small>
+                </div>
+
+            </div>
+        </div>
+        <div class="single-blog bd-bt-1 mb-two pb-1">
+            <small class="text-grey"> <strong>July 01, 2020</strong> <strong class="viewCount">66 views</strong>
+            </small>
+            <h5 class="newsHead5 bold mt-half mb-half w-100">Meeting the WFH Crunch with Remote Manageability, In or Out
+                of Band</h5>
+            <p class="pt-half">
+                A remote manageability system empowers IT to monitor, restore, upgrade and protect
+                devices whether they're powered-up or powered-down.
+            </p>
+            <div class="author-section disp-flex flex-dir-row ovpd-1">
+                <div class="userImage ovpd-2">
+                    <i class="far fa-user"></i>
+                </div>
+                <div class="author-details ovpd-2">
+                    <small class="text-grey">
+                        By Amresh Singh
+                    </small>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div class="">
+        <div class="category-btn single-news disp-flex jc-flexEnd align-end">
+            <a href="#" class="uppercase button btn-large green-hover fill-green z-0 pd-2" title="Learn more"> <i>
+                    VISIT THE DIGITALLY COGNIZANT BLOG
+                </i> </a>
+        </div>
+    </div>
+</div>
+
+<!-------------------------------------------------- SECTION-12 --------------------------------------------------------->
+
+<div class="section-12 mb-two">
+    <div class="header-section ">
+        <h3 class="text-center dynamic-heading mb-one text-blue mt-half pt-3">TAKE THE FIRST STEP</h3>
+        <p class="text-center mb-one">
+            Serving customers by looking forward as well as back is a big promise, but the power of
+            today’s new digital capabilities is vast and growing.
+        </p>
+        <p class="text-center bold mb-one">
+            Let’s talk about how digital can work for your business.
+        </p>
+    </div>
+
+    <div class="form">
+        <ul class="disp-flex flex-dir-row flex-wrap jc-spaceAround no-bullets">
+            <li class="form-item ovpd-1 mb-half">
+                <input type="text" name="name" placeholder="NAME*">
+            </li>
+            <li class="form-item ovpd-1 mb-half">
+                <input type="email" placeholder="EMAIL*">
+            </li>
+            <li class="form-item ovpd-1 mb-half">
+                <input type="text" placeholder="ORGANIZATION*">
+            </li>
+            <li class="form-item ovpd-1 mb-half">
+                <input type="number" placeholder="CONTACT NUMBER*">
+            </li>
+            <li class="form-item ovpd-1 mb-half">
+                <input type="text" placeholder="REGION*">
+            </li>
+            <li class="form-item ovpd-1 mb-half">
+                <input type="text" placeholder="INQUIRY TYPE*">
+            </li>
+            <li class="form-item-large ovpd-1 mb-half">
+                <input type="textarea" placeholder="MESSAGE">
+            </li>
+        </ul>
+    </div>
+    <div class="category-btn single-news disp-flex jc-flexEnd align-end">
+        <a href="#" class="uppercase button green-hover fill-green z-0 pd-2" title="Learn more"> <i>
+                submit
+            </i> </a>
+    </div>
+</div>
+
+<!-------------------------------------------------- SECTION-13 --------------------------------------------------------->
+<div class="section-13">
+    <div class="header disp-flex flex-dir-row jc-flexStart align-middle">
+        <div class="finale">
+            <ul class="menu no-bullets">
+                <li class="p-10">
+                    <i class="fab fa-facebook-f"></i>
+                </li>
+                <li class="p-10">
+                    <i class="fab fa-linkedin-in"></i>
+
+                </li>
+                <li class="p-10">
+                    <i class="fab fa-twitter"></i>
+
+                </li>
+                <li class="p-10">
+                    <i class="fab fa-instagram"></i>
+                </li>
+                <li class="p-10 youtube">
+                    <i class="fab fa-youtube"></i>
+                </li>
+                <li class="p-10">
+                    <a href="#" class="text-black" title="Events">Sitemaps</a>
+                </li>
+                <li class="p-10">
+                    <a href="#" class="text-black" title="Events">Terms</a>
+                </li>
+                <li class="p-10">
+                    <a href="#" class="text-black" title="Events">Privacy Notice</a>
+                </li>
+                <li class="p-10">
+                    <a href="#" class="text-black" title="Events">Cookie Notice</a>
+                </li>
+                <li class="p-10">
+                    <a href="#" class="text-grey small">©2020 Cognizant, all rights reserved</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<!-------------------------------------------------- SECTION-14 --------------------------------------------------------->
+<div class="section-14 margin-l1 ovpd-1">
+    <div class="parent">
+        <div class="div1 bd-1">
+            <h6 class="text-blue uppercase bold ovpd-1 green-text-hover pointer">INDUSTRIES</h6>
+            <ul class="no-bullets ovpd-1 text-grey">
+                <li class="green-text-hover pointer">Banking</li>
+                <li class="green-text-hover pointer">Capital Markets</li>
+                <li class="green-text-hover pointer">Communications, Media &</li>
+                <li class="green-text-hover pointer">Technology</li>
+                <li class="green-text-hover pointer">Consumer Goods</li>
+                <li class="green-text-hover pointer">Education</li>
+            </ul>
+        </div>
+        <div class="div2 bd-1">
+            <h6 class="text-blue uppercase bold ovpd-2 green-text-hover pointer"></h6>
+            <ul class="no-bullets ovpd-1 text-grey">
+                <li class="green-text-hover pointer">Healthcare</li>
+                <li class="green-text-hover pointer">Information Services</li>
+                <li class="green-text-hover pointer">Insurance</li>
+                <li class="green-text-hover pointer">Life Sciences</li>
+                <li class="green-text-hover pointer">Manufacturing</li>
+            </ul>
+        </div>
+        <div class="div3 bd-1">
+            <h6 class="text-blue uppercase bold ovpd-1 green-text-hover pointer">SERvices</h6>
+            <ul class="no-bullets ovpd-1 text-grey">
+                <li class="text-blue bold green-text-hover pointer">Cognizant Digital Business</li>
+                <li class="green-text-hover pointer">Artificial Intelligence</li>
+                <li class="green-text-hover pointer">Digital Engineering</li>
+                <li class="green-text-hover pointer">Digital Strategy</li>
+                <li class="green-text-hover pointer">Interactive</li>
+                <li class="green-text-hover pointer">Internet of Things</li>
+            </ul>
+        </div>
+        <div class="div4 bd-1">
+            <h6 class="text-blue uppercase bold ovpd-2 green-text-hover pointer"></h6>
+            <ul class="no-bullets ovpd-1 text-grey">
+                <li class="text-blue bold green-text-hover pointer">Cognizant Digital Operations</li>
+                <li class="green-text-hover pointer">Enterprise Services</li>
+                <li class="green-text-hover pointer">Industry & Platform Solutions</li>
+                <li class="green-text-hover pointer">Digital Strategy</li>
+                <li class="green-text-hover pointer">Intelligent Process Automation</li>
+            </ul>
+        </div>
+        <div class="div5 bd-1">
+            asd
+        </div>
+        <div class="div6 bd-1">
+            asd
+        </div>
+        <div class="div7 bd-1">
+            asd
+        </div>
+        <div class="div8 bd-1">
+            asd
+        </div>
+        <div class="div9 bd-1">
+            asd
+        </div>
+    </div>
 </div>
 
 
