--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
 <!-------------------------------------------------- SECTION-14 --------------------------------------------------------->
 <div class="section-14 margin-l1 ovpd-1">
     <div class="parent">
-        <div class="div1 bd-1">
+        <div class="div1">
             <h6 class="text-blue uppercase bold ovpd-1 green-text-hover pointer">INDUSTRIES</h6>
             <ul class="no-bullets ovpd-1 text-grey">
                 <li class="green-text-hover pointer">Banking</li>
@@ -631,7 +631,7 @@
                 <li class="green-text-hover pointer">Education</li>
             </ul>
         </div>
-        <div class="div2 bd-1">
+        <div class="div2">
             <h6 class="text-blue uppercase bold ovpd-2 green-text-hover pointer"></h6>
             <ul class="no-bullets ovpd-1 text-grey">
                 <li class="green-text-hover pointer">Healthcare</li>
@@ -641,7 +641,7 @@
                 <li class="green-text-hover pointer">Manufacturing</li>
             </ul>
         </div>
-        <div class="div3 bd-1">
+        <div class="div3">
             <h6 class="text-blue uppercase bold ovpd-1 green-text-hover pointer">SERvices</h6>
             <ul class="no-bullets ovpd-1 text-grey">
                 <li class="text-blue bold green-text-hover pointer">Cognizant Digital Business</li>
@@ -652,7 +652,7 @@
                 <li class="green-text-hover pointer">Internet of Things</li>
             </ul>
         </div>
-        <div class="div4 bd-1">
+        <div class="div4">
             <h6 class="text-blue uppercase bold ovpd-2 green-text-hover pointer"></h6>
             <ul class="no-bullets ovpd-1 text-grey">
                 <li class="text-blue bold green-text-hover pointer">Cognizant Digital Operations</li>
@@ -662,20 +662,85 @@
                 <li class="green-text-hover pointer">Intelligent Process Automation</li>
             </ul>
         </div>
-        <div class="div5 bd-1">
-            asd
+        <div class="div5">
+            <h6 class="text-blue uppercase bold ovpd-1 green-text-hover pointer">COGNIZANT CONSULTING</h6>
+            <ul class="no-bullets ovpd-1 text-grey">
+                <li class="text-blue bold green-text-hover pointer">All Latest Thinking</li>
+                <li class="green-text-hover pointer">Browse Case Studies</li>
+                <li class="green-text-hover pointer">Cognizant Podcasts</li>
+                <li class="green-text-hover pointer">Cognizanti Journal</li>
+                <li class="green-text-hover pointer">Digitally Cognizant Blog</li>
+                <li class="green-text-hover pointer">Infographics</li>
+            </ul>
         </div>
-        <div class="div6 bd-1">
-            asd
+        <div class="div6">
+            <h6 class="text-blue uppercase bold ovpd-1 green-text-hover pointer"></h6>
+            <ul class="no-bullets ovpd-2 text-grey">
+                <li class="text-blue bold green-text-hover pointer">Key Themes</li>
+                <li class="green-text-hover pointer">AI Primary Research</li>
+                <li class="green-text-hover pointer">Blockchain Primary Research</li>
+                <li class="green-text-hover pointer">Blockchain Solutions</li>
+                <li class="green-text-hover pointer">Digitally Cognizant Blog</li>
+                <li class="green-text-hover pointer">Code Halos</li>
+                <li class="green-text-hover pointer">Digital Maturity Research</li>
+            </ul>
         </div>
-        <div class="div7 bd-1">
-            asd
+        <div class="div7">
+            <h6 class="text-blue uppercase bold ovpd-1 green-text-hover pointer">LATEST THINKING</h6>
+            <ul class="no-bullets ovpd-1 text-grey">
+                <li class="text-blue bold green-text-hover pointer">Our Media & Publications</li>
+                <li class="green-text-hover pointer">All Latest Thinking</li>
+                <li class="green-text-hover pointer">Cognizant Podcasts</li>
+                <li class="green-text-hover pointer">Cognizanti Journal</li>
+                <li class="green-text-hover pointer">Digitally Cognizant Blog</li>
+                <li class="green-text-hover pointer">Infographics</li>
+                <li class="green-text-hover pointer">Perspectives</li>
+            </ul>
         </div>
-        <div class="div8 bd-1">
-            asd
+        <div class="div8">
+            <h6 class="text-blue uppercase bold ovpd-1 green-text-hover pointer"></h6>
+            <ul class="no-bullets ovpd-2 text-grey">
+                <li class="text-blue bold green-text-hover pointer">Cognizant Digital Systems & Technology</li>
+                <li class="green-text-hover pointer">Application Services</li>
+                <li class="green-text-hover pointer">Cloud Enablement</li>
+                <li class="green-text-hover pointer">Cognizant Infrastructure Services</li>
+                <li class="green-text-hover pointer">Cognizant Securitys</li>
+                <li class="green-text-hover pointer">Core Modernization</li>
+                <li class="green-text-hover pointer">Digital Engineering</li>
+                <li class="green-text-hover pointer">Enterprise Application Services</li>
+                <li class="green-text-hover pointer">Quality Engineering & Assurance</li>
+            </ul>
         </div>
-        <div class="div9 bd-1">
-            asd
+        <div class="div9">
+            <h6 class="text-blue uppercase bold ovpd-1 green-text-hover pointer">ABOUT COGNIZANT</h6>
+            <ul class="no-bullets ovpd-2 text-grey">
+                <li class="text-blue bold green-text-hover pointer">Be.Cognizant</li>
+                <li class="green-text-hover pointer">Board of Directors</li>
+                <li class="green-text-hover pointer">Client Briefing Program</li>
+                <li class="green-text-hover pointer">Cognizant Events</li>
+                <li class="green-text-hover pointer">Contact Us</li>
+                <li class="green-text-hover pointer">Corporate Governance</li>
+                <li class="green-text-hover pointer">Corporate Integrity</li>
+                <li class="green-text-hover pointer">Culture & Values</li>
+                <li class="green-text-hover pointer">Diversity & Inclusion</li>
+                <li class="green-text-hover pointer">Leadership Team</li>
+                <li class="green-text-hover pointer">News & Press Releases</li>
+                <li class="green-text-hover pointer">Partnerships</li>
+                <li class="green-text-hover pointer">Public Policy</li>
+                <li class="green-text-hover pointer">Sustainability</li>
+                <li class="green-text-hover pointer">Talent Worldwide</li>
+                <li class="green-text-hover pointer">Women Empowered</li>
+                <li class="green-text-hover pointer text-blue pt-half">Center for the Future of Work</li>
+                <li class="green-text-hover pointer">21 More Jobs of the Future</li>
+                <li class="green-text-hover pointer">Digital Workforce of the Future</li>
+                <li class="green-text-hover pointer">Jobs of the Future Index</li>
+                <li class="green-text-hover pointer">Our Post-COVID Future</li>
+                <li class="green-text-hover pointer">Digital Maturity Research</li>
+                <li class="green-text-hover pointer">When Machines Do Everything</li>
+                <li class="green-text-hover pointer">World Economic Forum—Davos</li>
+                <h6 class="text-blue uppercase bold pt-half green-text-hover pointer">GLOSSARY</h6>
+                <h6 class="text-blue uppercase bold pt-half green-text-hover pointer">INFORMATION FOR SUPPLIERS</h6>
+            </ul>
         </div>
     </div>
 </div>
