final restsructuring and styling changes

--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- **********************************************************************************************************************
+                                                AUTHOR: ADITYA KUMAWAT
+                                                    EMP-ID: 856754
+                            THE FOLLWOWING HTML CODE IS DIVIDED INTO VARIOUS SECTIONS FROM 1 T0 14
+********************************************************************************************************************** -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -53,9 +60,6 @@
         </div>
     </div>
 </div>
-
-
-
 
 
 <div class="navBar">
@@ -226,7 +230,8 @@
         <img class="pointer" src="./assets/img7.jpg" alt="">
     </div>
     <div class="content ovpd-1">
-        <div class="label uppercase bold mb-half pointer">Analyst Accolade</div>
+        <div class="label uppercase bold mb-half pointer">special report</div>
+        <h5 class="h5 disp-flex pointer">After the virus</h5>
         <p class="pd-small mb-half">
             What will the world look like in 2023? This special report looks at the impacts of
             the virus and various other factors
@@ -281,7 +286,7 @@
         </div>
         <div class="single-news">
             <strong class="uppercase small text-grey">
-                june 29, 2020
+                JUNE 23, 2020
             </strong>
             <h5 class="newsHead5 disp-flex pointer green-text-hover">
                 Cognizant Collaborates on Verily's Nationwide Baseline COVID-19 Testing Program
@@ -289,7 +294,7 @@
         </div>
         <div class="single-news">
             <strong class="uppercase small text-grey">
-                june 29, 2020
+                JUNE 11, 2020
             </strong>
             <h5 class="newsHead5 disp-flex pointer green-text-hover">
                 Cognizant Completes Acquisition of Collaborative Solutions, One of the World’s Largest Workday Services
@@ -298,7 +303,7 @@
         </div>
         <div class="single-news">
             <strong class="uppercase small text-grey">
-                june 29, 2020
+                JUNE 01, 2020
             </strong>
             <h5 class="newsHead5 disp-flex pointer green-text-hover">
                 Cognizant Completes Acquisition of EI-Technologies, a Leading European Salesforce Platform Specialist
@@ -443,7 +448,7 @@
 
 
 <!-------------------------------------------------- SECTION-11 --------------------------------------------------------->
-<div class="section-11 mb-large">
+<div class="section-11 mb-large margin-l1">
     <h3 class="uppercase bold text-blue text-center mb-one pt-3 mb-one dynamic-heading pointer">digitally cognizants</h3>
     <div class="category-section ovpd-1">
         <div class="category-state">
@@ -478,13 +483,11 @@
             </div>
         </div>
         <div class="single-blog bd-bt-1 mb-two pb-1">
-            <small class="text-grey"> <strong>July 01, 2020</strong> <strong class="viewCount">66 views</strong>
+            <small class="text-grey"> <strong>June 30, 2020</strong> <strong class="viewCount">66 views</strong>
             </small>
-            <h5 class="newsHead5 bold mt-half mb-half w-100 pointer">Meeting the WFH Crunch with Remote Manageability, In or Out
-                of Band</h5>
+            <h5 class="newsHead5 bold mt-half mb-half w-100 pointer">When It Comes To Application Modernization, It's All About Pacing Yourself</h5>
             <p class="pt-half">
-                A remote manageability system empowers IT to monitor, restore, upgrade and protect
-                devices whether they're powered-up or powered-down.
+                In my experience with both marathon training and application modernization, I've learned a few lessons from seeing similarities between the two.
             </p>
             <div class="author-section disp-flex flex-dir-row ovpd-1">
                 <div class="userImage ovpd-2">
@@ -492,20 +495,18 @@
                 </div>
                 <div class="author-details ovpd-2">
                     <small class="text-grey pointer">
-                        By Amresh Singh
+                        By Snjezana Cvoro-Begovic
                     </small>
                 </div>
 
             </div>
         </div>
         <div class="single-blog bd-bt-1 mb-two pb-1">
-            <small class="text-grey"> <strong>July 01, 2020</strong> <strong class="viewCount">66 views</strong>
+            <small class="text-grey"> <strong>June 29, 2020</strong> <strong class="viewCount">66 views</strong>
             </small>
-            <h5 class="newsHead5 bold mt-half mb-half w-100 pointer">Meeting the WFH Crunch with Remote Manageability, In or Out
-                of Band</h5>
+            <h5 class="newsHead5 bold mt-half mb-half w-100 pointer">Customer Identity and Access Management in the Age of COVID-19</h5>
             <p class="pt-half">
-                A remote manageability system empowers IT to monitor, restore, upgrade and protect
-                devices whether they're powered-up or powered-down.
+                With the surge in demand for digital services, businesses are expanding their identity and access management focus from employees to customers.
             </p>
             <div class="author-section disp-flex flex-dir-row ovpd-1">
                 <div class="userImage ovpd-2">
@@ -513,7 +514,7 @@
                 </div>
                 <div class="author-details ovpd-2">
                     <small class="text-grey pointer">
-                        By Amresh Singh
+                        By Sudhakar ChinnaswamyKamalanathan
                     </small>
                 </div>
 
@@ -705,10 +706,6 @@
                 <li class="green-text-hover pointer">Cloud Enablement</li>
                 <li class="green-text-hover pointer">Cognizant Infrastructure Services</li>
                 <li class="green-text-hover pointer">Cognizant Securitys</li>
-                <li class="green-text-hover pointer">Core Modernization</li>
-                <li class="green-text-hover pointer">Digital Engineering</li>
-                <li class="green-text-hover pointer">Enterprise Application Services</li>
-                <li class="green-text-hover pointer">Quality Engineering & Assurance</li>
             </ul>
         </div>
         <div class="div9">
