--- a/index.html
+++ b/index.html
@@ -25,35 +25,38 @@
         <div>
             <ul class="menu w-100 align-middle horizontal-align no-bullets text-black">
                 <li class="p-10 pointer">
-                    <a href="#" data-attribute="topHeaderNavTag" class="text-black green-text-hover" title="Careers">Careers</a>
+                    <a href="#" data-attribute="topHeaderNavTag" class="text-black green-text-hover"
+                        title="Careers">Careers</a>
                 </li>
                 <li>
                     <span class="black dot"></span>
                 </li>
                 <li class="p-10 pointer">
-                    <a href="#" data-attribute="topHeaderNavTag" class="text-black green-text-hover" title="Events">Events</a>
+                    <a href="#" data-attribute="topHeaderNavTag" class="text-black green-text-hover"
+                        title="Events">Events</a>
                 </li>
                 <li>
                     <span class="black dot"></span>
                 </li>
                 <li class="p-10 pointer">
-                    <a href="#" data-attribute="topHeaderNavTag" class="text-black green-text-hover" title="Investors">Investors</a>
+                    <a href="#" data-attribute="topHeaderNavTag" class="text-black green-text-hover"
+                        title="Investors">Investors</a>
                 </li>
                 <li>
                     <a class="black-vertical"></a>
                 </li>
                 <li>
                     <span>
-                        <img class="globeLogo pd-logo-header pointer green-text-hover" src="./assets/globe.png" alt="globe" title="worldwide">
+                        <i class="fas fa-globe globeLogo pd-logo-header pointer green-text-hover "></i>
                     </span>
                 </li>
                 <li class="p-10 pointer">
-                    <a href="#" data-attribute="topHeaderNavTag" class="text-black green-text-hover" title="Worldwide">Worldwide</a>
+                    <a href="#" data-attribute="topHeaderNavTag" class="text-black green-text-hover"
+                        title="Worldwide">Worldwide</a>
                 </li>
                 <li>
                     <span>
-                        <img class="searchLogo pd-logo-header pointer green-text-hover" src="http://cdn.onlinewebfonts.com/svg/img_158544.png"
-                            alt="search-button" title="search">
+                        <i class="fas fa-search searchLogo pd-logo-header pointer green-text-hover "></i>
                     </span>
                 </li>
             </ul>
@@ -449,7 +452,8 @@
 
 <!-------------------------------------------------- SECTION-11 --------------------------------------------------------->
 <div class="section-11 mb-large margin-l1">
-    <h3 class="uppercase bold text-blue text-center mb-one pt-3 mb-one dynamic-heading pointer">digitally cognizants</h3>
+    <h3 class="uppercase bold text-blue text-center mb-one pt-3 mb-one dynamic-heading pointer">digitally cognizants
+    </h3>
     <div class="category-section ovpd-1">
         <div class="category-state">
             <ul class="state-type  disp-flex flex-dir-row jc-flexEnd text-normal text-small ">
@@ -464,7 +468,8 @@
         <div class="single-blog bd-bt-1 mb-two pb-1">
             <small class="text-grey"> <strong>July 01, 2020</strong> <strong class="viewCount">66 views</strong>
             </small>
-            <h5 class="newsHead5 bold mt-half mb-half w-100 pointer">Meeting the WFH Crunch with Remote Manageability, In or Out
+            <h5 class="newsHead5 bold mt-half mb-half w-100 pointer">Meeting the WFH Crunch with Remote Manageability,
+                In or Out
                 of Band</h5>
             <p class="pt-half">
                 A remote manageability system empowers IT to monitor, restore, upgrade and protect
@@ -485,9 +490,11 @@
         <div class="single-blog bd-bt-1 mb-two pb-1">
             <small class="text-grey"> <strong>June 30, 2020</strong> <strong class="viewCount">66 views</strong>
             </small>
-            <h5 class="newsHead5 bold mt-half mb-half w-100 pointer">When It Comes To Application Modernization, It's All About Pacing Yourself</h5>
+            <h5 class="newsHead5 bold mt-half mb-half w-100 pointer">When It Comes To Application Modernization, It's
+                All About Pacing Yourself</h5>
             <p class="pt-half">
-                In my experience with both marathon training and application modernization, I've learned a few lessons from seeing similarities between the two.
+                In my experience with both marathon training and application modernization, I've learned a few lessons
+                from seeing similarities between the two.
             </p>
             <div class="author-section disp-flex flex-dir-row ovpd-1">
                 <div class="userImage ovpd-2">
@@ -504,9 +511,11 @@
         <div class="single-blog bd-bt-1 mb-two pb-1">
             <small class="text-grey"> <strong>June 29, 2020</strong> <strong class="viewCount">66 views</strong>
             </small>
-            <h5 class="newsHead5 bold mt-half mb-half w-100 pointer">Customer Identity and Access Management in the Age of COVID-19</h5>
+            <h5 class="newsHead5 bold mt-half mb-half w-100 pointer">Customer Identity and Access Management in the Age
+                of COVID-19</h5>
             <p class="pt-half">
-                With the surge in demand for digital services, businesses are expanding their identity and access management focus from employees to customers.
+                With the surge in demand for digital services, businesses are expanding their identity and access
+                management focus from employees to customers.
             </p>
             <div class="author-section disp-flex flex-dir-row ovpd-1">
                 <div class="userImage ovpd-2">
@@ -523,7 +532,8 @@
     </div>
     <div class="">
         <div class="category-btn single-news disp-flex jc-flexEnd align-end">
-            <a href="#" class="uppercase button btn-large green-hover fill-green z-0 pd-2 pointer" title="Learn more"> <i>
+            <a href="#" class="uppercase button btn-large green-hover fill-green z-0 pd-2 pointer" title="Learn more">
+                <i>
                     VISIT THE DIGITALLY COGNIZANT BLOG
                 </i> </a>
         </div>
@@ -671,7 +681,6 @@
                 <li class="green-text-hover pointer">Cognizant Podcasts</li>
                 <li class="green-text-hover pointer">Cognizanti Journal</li>
                 <li class="green-text-hover pointer">Digitally Cognizant Blog</li>
-                <li class="green-text-hover pointer">Infographics</li>
             </ul>
         </div>
         <div class="div6">
