media queries changed according to small screen devices

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
     <div class="navBar">
         <div class="row align-middle pd-1 jc-spaceBetween">
-            <div class="coulmns large-4 no-pd align-middle disp-flex">
-                <embed class="logo pointer" type="image/svg+xml" src="./assets/logo.svg" />
+            <div class="main-logo coulmns large-4 no-pd align-middle disp-flex">
+                <embed class=" logo pointer" type="image/svg+xml" src="./assets/logo.svg" />
             </div>
             <div class="coulmns large-8">
                 <ul class="no-bullets horizontal-align">
