--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
             <div>
                 <ul class="menu w-100 align-middle horizontal-align no-bullets text-black">
                     <li class="p-10 pointer">
-                        <a href="#" data-attribute="topHeaderNavTag" class="text-black green-text-hover"
+                        <a href="#" class="text-black green-text-hover"
                             title="Careers">Careers</a>
                     </li>
                     <li>
                         <span class="black dot"></span>
                     </li>
                     <li class="p-10 pointer">
-                        <a href="#" data-attribute="topHeaderNavTag" class="text-black green-text-hover"
+                        <a href="#" class="text-black green-text-hover"
                             title="Events">Events</a>
                     </li>
                     <li>
                         <span class="black dot"></span>
                     </li>
                     <li class="p-10 pointer">
-                        <a href="#" data-attribute="topHeaderNavTag" class="text-black green-text-hover"
+                        <a href="#" class="text-black green-text-hover"
                             title="Investors">Investors</a>
                     </li>
                     <li>
@@ -51,7 +51,7 @@
                         </span>
                     </li>
                     <li class="p-10 pointer">
-                        <a href="#" data-attribute="topHeaderNavTag" class="text-black green-text-hover"
+                        <a href="#" class="text-black green-text-hover"
                             title="Worldwide">Worldwide</a>
                     </li>
                     <li>
@@ -92,12 +92,12 @@
     <div class="dummycarousel">
         <div class="disp-flex flex-dir-column section1">
             <div style="min-height:500px;" class="row flex-container align-middle align-left pd-2 wd-100">
-                <div class="columns medium-10 large-6 medium-pl3 pd-2 sect1"><img src="" alt="">
+                <div class="columns medium-10 large-6 pl-5 pd-2 sect1"><img src="" alt="">
                     <h1 class="h2 text-blue">Chaos to Catalyst</h1>
                     <p class="section1-p">Navigate the COVID-19 crisis and its aftermath, and emerge with a commanding
                         position in your industry.</p>
                     <a href="/covid-19-chaos-to-catalyst-helping-companies-emerge-stronger" title="SEE HOW"
-                        data-attribute="homeBanner" class="button hollow success">SEE HOW<i class="arrow-right"></i></a>
+                        class="button hollow success">SEE HOW<i class="arrow-right"></i></a>
                 </div>
             </div>
         </div>
@@ -606,7 +606,7 @@
         <div class="header disp-flex flex-dir-row jc-flexStart align-middle">
             <div class="finale">
                 <ul class="menu no-bullets">
-                    <li class="p-10">
+                    <li class="p-10 margin-l1">
                         <i class="fab fa-facebook-f"></i>
                     </li>
                     <li class="p-10">
@@ -624,16 +624,16 @@
                         <i class="fab fa-youtube"></i>
                     </li>
                     <li class="p-10">
-                        <a href="#" class="text-black" title="Events">Sitemaps</a>
+                        <a href="#" class="text-black green-text-hover" title="Events">Sitemaps</a>
                     </li>
                     <li class="p-10">
-                        <a href="#" class="text-black" title="Events">Terms</a>
+                        <a href="#" class="text-black green-text-hover" title="Events">Terms</a>
                     </li>
                     <li class="p-10">
-                        <a href="#" class="text-black" title="Events">Privacy Notice</a>
+                        <a href="#" class="text-black green-text-hover" title="Events">Privacy Notice</a>
                     </li>
                     <li class="p-10">
-                        <a href="#" class="text-black" title="Events">Cookie Notice</a>
+                        <a href="#" class="text-black green-text-hover" title="Events">Cookie Notice</a>
                     </li>
                     <li class="p-10">
                         <a href="#" class="text-grey small">©2020 Cognizant, all rights reserved</a>
