fixed potrait mode alignment issues

--- a/index.html
+++ b/index.html
@@ -25,22 +25,19 @@
             <div>
                 <ul class="menu w-100 align-middle horizontal-align no-bullets text-black">
                     <li class="p-10 pointer">
-                        <a href="#" class="text-black green-text-hover"
-                            title="Careers">Careers</a>
+                        <a href="#" class="text-black green-text-hover" title="Careers">Careers</a>
                     </li>
                     <li>
                         <span class="black dot"></span>
                     </li>
                     <li class="p-10 pointer">
-                        <a href="#" class="text-black green-text-hover"
-                            title="Events">Events</a>
+                        <a href="#" class="text-black green-text-hover" title="Events">Events</a>
                     </li>
                     <li>
                         <span class="black dot"></span>
                     </li>
                     <li class="p-10 pointer">
-                        <a href="#" class="text-black green-text-hover"
-                            title="Investors">Investors</a>
+                        <a href="#" class="text-black green-text-hover" title="Investors">Investors</a>
                     </li>
                     <li>
                         <a class="black-vertical"></a>
@@ -51,8 +48,7 @@
                         </span>
                     </li>
                     <li class="p-10 pointer">
-                        <a href="#" class="text-black green-text-hover"
-                            title="Worldwide">Worldwide</a>
+                        <a href="#" class="text-black green-text-hover" title="Worldwide">Worldwide</a>
                     </li>
                     <li>
                         <span>
@@ -92,7 +88,7 @@
     <div class="dummycarousel">
         <div class="disp-flex flex-dir-column section1">
             <div style="min-height:500px;" class="row flex-container align-middle align-left pd-2 wd-100">
-                <div class="columns medium-10 large-6 pl-5 pd-2 sect1"><img src="" alt="">
+                <div class="section-1 columns medium-10 large-6 pl-5 pd-2 sect1"><img src="" alt="">
                     <h1 class="h2 text-blue">Chaos to Catalyst</h1>
                     <p class="section1-p">Navigate the COVID-19 crisis and its aftermath, and emerge with a commanding
                         position in your industry.</p>
@@ -603,9 +599,9 @@
 
     <!-------------------------------------------------- SECTION-13 --------------------------------------------------------->
     <div class="section-13">
-        <div class="header disp-flex flex-dir-row jc-flexStart align-middle">
-            <div class="finale">
-                <ul class="menu no-bullets">
+        <div class="header">
+            <div class="finale disp-flex flex-dir-row jc-spaceBetween align-middle">
+                <ul class="menu no-bullets ul-1">
                     <li class="p-10 margin-l1">
                         <i class="fab fa-facebook-f"></i>
                     </li>
@@ -623,6 +619,8 @@
                     <li class="p-10 youtube">
                         <i class="fab fa-youtube"></i>
                     </li>
+                </ul>
+                <ul class="menu no-bullets ul-2">
                     <li class="p-10">
                         <a href="#" class="text-black green-text-hover" title="Events">Sitemaps</a>
                     </li>
