--- a/index.html
+++ b/index.html
@@ -86,14 +86,15 @@
     <!-------------------------------------------------- SECTION-1 --------------------------------------------------------->
 
     <div class="dummycarousel">
-        <div class="disp-flex flex-dir-column section1">
+        <div class="disp-flex flex-dir-row section1">
             <div style="min-height:500px;" class="row flex-container align-middle align-left pd-2 wd-100">
                 <div class="section-1 columns medium-10 large-6 pl-5 pd-2 sect1"><img src="" alt="">
                     <h1 class="h2 text-blue">Chaos to Catalyst</h1>
                     <p class="section1-p">Navigate the COVID-19 crisis and its aftermath, and emerge with a commanding
-                        position in your industry.</p>
+                        position in your industry.</p> 
                     <a href="/covid-19-chaos-to-catalyst-helping-companies-emerge-stronger" title="SEE HOW"
                         class="button hollow success">SEE HOW<i class="arrow-right"></i></a>
+                    
                 </div>
             </div>
         </div>
